[gd_scene load_steps=12 format=3 uid="uid://davys5ol18oyo"]

[ext_resource type="StyleBox" uid="uid://do5c5v5kvgv0s" path="res://resources/styles/panel_small_style.tres" id="1_06xpe"]
[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_kcif0"]
[ext_resource type="Texture2D" uid="uid://dguw83ogihbta" path="res://assets/textures/gui/window_tiny_bg.png" id="2_cg76y"]
[ext_resource type="Texture2D" uid="uid://bh01xbmjanku0" path="res://assets/textures/gui/button_bg.png" id="2_e7opb"]
[ext_resource type="Texture2D" uid="uid://jv8twhntt6x3" path="res://assets/textures/gui/button_hover_bg.png" id="3_fx7y7"]
[ext_resource type="Texture2D" uid="uid://slraulfmk8c0" path="res://assets/textures/gui/pictograms.png" id="4_dmywd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4k086"]
bg_color = Color(0, 0, 0, 0.25098)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k576p"]
texture = ExtResource("2_cg76y")
modulate_color = Color(0.917647, 0.807843, 0.647059, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_td4xc"]
atlas = ExtResource("4_dmywd")
region = Rect2(376.638, 15.8875, 58.3096, 53.2115)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh53g"]
atlas = ExtResource("4_dmywd")
region = Rect2(532.01, 2.29694, 48.3741, 55.326)

[sub_resource type="AtlasTexture" id="AtlasTexture_wimn7"]
atlas = ExtResource("4_dmywd")
region = Rect2(9.61571, 881, 845.387, 129)

[node name="PauseMenu" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4k086")
script = ExtResource("1_kcif0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -55.5
offset_right = 80.0
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(81, 54.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_k576p")

[node name="QuitButton" type="TextureButton" parent="Panel"]
self_modulate = Color(0.843007, 0.282913, 0.299802, 1)
layout_mode = 0
offset_left = 38.0
offset_top = 24.0
offset_right = 117.0
offset_bottom = 97.0
texture_normal = ExtResource("2_e7opb")
texture_pressed = ExtResource("2_e7opb")
texture_hover = ExtResource("3_fx7y7")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -26.5
offset_right = 29.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_td4xc")

[node name="CancelButton" type="TextureButton" parent="Panel"]
self_modulate = Color(0.827451, 0.717647, 0.564706, 1)
layout_mode = 0
offset_left = 117.0
offset_top = -25.0
offset_right = 182.0
offset_bottom = 35.0
texture_normal = ExtResource("2_e7opb")
texture_pressed = ExtResource("2_e7opb")
texture_hover = ExtResource("3_fx7y7")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/CancelButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -27.5
offset_right = 24.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_wh53g")

[node name="ControlsInfo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -169.0
offset_right = 895.0
offset_bottom = -21.0
grow_vertical = 0
theme_override_styles/panel = ExtResource("1_06xpe")

[node name="TextureRect" type="TextureRect" parent="ControlsInfo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -422.5
offset_top = -64.5
offset_right = 422.5
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_wimn7")
